--- a/Evaluation/Example - Loading Model and Trasfer Attack.ipynb
+++ b/Evaluation/Example - Loading Model and Trasfer Attack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████| 40/40 [00:00<00:00, 141.32it/s]\n"
+      "100%|██████████| 40/40 [00:00<00:00, 181.73it/s]\n"
      ]
     },
     {
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████████| 40/40 [00:09<00:00,  4.40it/s]\n"
+      "100%|██████████| 40/40 [00:06<00:00,  6.33it/s]\n"
      ]
     },
     {
@@ -160,6 +160,7 @@
     "args_.verbose = 1\n",
     "args_.save_path = 'weights/cifar/dummy/'\n",
     "args_.validation = False\n",
+    "args_.aggregation_op = None\n",
     "\n",
     "# Generate the dummy values here\n",
     "aggregator, clients = dummy_aggregator(args_, num_user=40)"
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +207,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Model Weights\n",
     "num_models = 40\n",
     "\n",
-    "root_path = \"/home/ubuntu/Documents/jiarui/experiments/FedAvg_adv/rep_atk/rep_scale0/weights\"\n",
+    "root_path = \"/home/ubuntu/Documents/jiarui/experiments/FAT_progressive/FedAvg_adv_progressive/weights/avg_w\"\n",
     "\n",
     "np.set_printoptions(formatter={'float': lambda x: \"{0:0.2f}\".format(x)})\n",
     "\n",
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {
     "scrolled": false
    },
@@ -472,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,6 +498,25 @@
     "        adv_sim_untarget[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[4]][victim_idxs[victim]].data.tolist()\n",
     "        adv_target[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[5]][victim_idxs[victim]].data.tolist()\n",
     "        adv_miss[adv_idx,victim] = logs_adv[victim_idxs[adv_idx]][metrics[6]][victim_idxs[victim]].data.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8255093082785606\n",
+      "0.540223478525877\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(orig_acc) / (orig_acc.shape[0] * orig_acc.shape[1]))\n",
+    "print(np.sum(adv_acc) / (adv_acc.shape[0] * adv_acc.shape[1]))"
    ]
   },
   {
@@ -875,6 +895,230 @@
    "source": [
     "mypath = \"/home/ubuntu/Documents/jiarui/experiments/oriCode/testFAT/pfeddef/weights\"\n",
     "np.load(f\"{mypath}/train_client_weights.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- 3300 -----\n",
+      "----- 3400 -----\n",
+      "3441 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3441 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3442 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3442 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3443 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3443 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3444 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3444 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3445 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3445 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3446 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3446 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3447 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3447 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3448 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3448 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3449 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3449 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3450 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3450 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3451 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3451 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3452 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3452 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3453 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3453 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3454 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3454 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3455 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3455 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3456 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3456 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3457 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3457 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3458 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3458 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3459 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3459 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3460 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3460 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3461 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3461 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3462 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3462 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3463 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3463 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3464 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3464 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3465 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3465 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3466 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3466 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3467 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3467 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3468 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3468 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3469 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3469 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3470 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3470 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3471 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3471 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3472 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3472 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3473 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3473 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3474 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3474 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3475 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3475 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3476 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3476 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3477 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3477 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3478 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3478 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3479 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3479 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3480 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3480 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3481 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3481 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3482 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3482 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3483 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3483 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3484 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3484 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3485 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3485 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3486 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3486 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3487 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3487 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3488 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3488 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3489 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3489 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3490 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3490 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3491 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3491 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3492 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3492 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3493 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3493 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3494 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3494 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3495 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3495 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3496 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3496 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3497 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3497 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3498 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3498 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3499 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3499 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "----- 3500 -----\n",
+      "3500 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3500 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3501 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3501 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3502 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3502 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3503 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3503 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3504 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3504 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3505 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3505 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3506 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3506 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3507 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3507 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3508 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3508 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3509 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3509 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3510 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3510 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3511 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3511 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3512 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3512 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3513 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3513 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3514 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3514 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3515 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3515 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3516 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3516 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3517 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3517 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3518 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3518 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3519 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3519 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3520 - orig tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "3520 - adv tensor([6, 6, 6, 6], device='cuda:0')\n",
+      "----- 3600 -----\n",
+      "----- 3700 -----\n",
+      "----- 3800 -----\n",
+      "----- 3900 -----\n",
+      "----- 4000 -----\n",
+      "----- 4100 -----\n",
+      "----- 4200 -----\n",
+      "----- 4300 -----\n",
+      "----- 4400 -----\n",
+      "----- 4500 -----\n",
+      "----- 4600 -----\n",
+      "----- 4700 -----\n",
+      "----- 4800 -----\n",
+      "----- 4900 -----\n",
+      "----- 5000 -----\n",
+      "----- 5100 -----\n",
+      "----- 5200 -----\n",
+      "----- 5300 -----\n",
+      "----- 5400 -----\n",
+      "----- 5500 -----\n",
+      "----- 5600 -----\n",
+      "----- 5700 -----\n",
+      "----- 5800 -----\n",
+      "----- 5900 -----\n",
+      "----- 6000 -----\n",
+      "----- 6100 -----\n",
+      "----- 6200 -----\n",
+      "----- 6300 -----\n",
+      "----- 6400 -----\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = 3201 # - 3200\n",
+    "end = 6401 # - 3200\n",
+    "for i in range(start,end):\n",
+    "    if i % 100 == 0:\n",
+    "        print(f\"----- {i} -----\")\n",
+    "    h_orig_category = torch.load(f\"/home/ubuntu/Documents/jiarui/experiments/multi_atker/collapse/pred_results/h_orig_category{i}.pt\")\n",
+    "    h_adv_category = torch.load(f\"/home/ubuntu/Documents/jiarui/experiments/multi_atker/collapse/pred_results/h_adv_category{i}.pt\")\n",
+    "    \n",
+    "    if torch.count_nonzero(h_orig_category) != 0:\n",
+    "        print(f\"{i} - orig {h_orig_category}\")\n",
+    "    if torch.count_nonzero(h_adv_category) != 0:\n",
+    "        print(f\"{i} - adv {h_adv_category}\")\n",
+    "#     print(len(h_orig_category))\n",
+    "#     print(len(h_adv_category))\n",
+    "#     print(h_orig_category)\n",
+    "#     print(h_adv_category)\n",
+    "    # break\n"
    ]
   },
   {
